crates/djls-python/src/snapshots/djls_python__tests__golden_empty_source.snap
---
source: crates/djls-python/src/lib.rs
expression: "snapshot(extract_rules(\"\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
