crates/djls-python/src/snapshots/djls_python__tests__golden_filter_method_style.snap
---
source: crates/djls-python/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.filters\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
