crates/djls-python/src/snapshots/djls_python__tests__golden_invalid_python.snap
---
source: crates/djls-python/src/lib.rs
expression: "snapshot(extract_rules(\"def {invalid\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
