crates/djls-python/src/snapshots/djls_python__tests__golden_no_registrations.snap
---
source: crates/djls-python/src/lib.rs
expression: "snapshot(extract_rules(source, \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
