crates/djls-python/src/snapshots/djls_python__tests__golden_non_bits_variable.snap
---
source: crates/djls-python/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules:
  "app.templatetags.custom::tag::custom_tag":
    arg_constraints:
      - Exact: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    as_var: keep
filter_arities: {}
block_specs: {}
